# x-todo

./: .gitignore  AGENTS.md  CLAUDE.md  CMakeLists.txt  LICENSE  README.md  README.zh-CN.md  size-badge.json
.github/workflows/: build.yml
docs/: testing.md
docs/conventions/: calendar.md  capsule-and-taskbar.md  capsule.md  dialogs-and-menus.md  multilevel-lists.md  reminders.md  settings-and-backup.md  surface-rendering.md  theme-system.md  window-hittest-and-geometry.md
docs/tasks/: T-A4-summary.md  T-A4.md
resources/: app.manifest  resource.rc
src/: Autostart.cpp  Autostart.h  CalendarLayout.cpp  CalendarLayout.h  CalendarModel.cpp  CalendarModel.h  CalendarTheme.h  EditIntent.cpp  EditIntent.h  GeometryPolicy.cpp  GeometryPolicy.h  GuiTypes.h  I18n.cpp  I18n.h  LaunchCommand.cpp  LaunchCommand.h  MainWindow.cpp  MainWindow.h  MainWindowTaskbar.cpp  MainWindowView.cpp  MenuModel.cpp  MenuModel.h  ReminderDispatchPolicy.h  ReminderPopup.cpp  ReminderPopup.h  ReminderPopupPolicy.h  ReminderSchedulerPolicy.h  ReminderService.cpp  ReminderService.h  ReminderSettingsPolicy.h  ReminderText.cpp  ReminderText.h  ReminderTimerPolicy.h  ReminderTypes.h  ReminderVisualPolicy.h  SettingsWindow.cpp  SettingsWindow.h  Store.cpp  Store.h  StoreFormat.cpp  (+22 more)
tests/: CMakeLists.txt  calendar_layout_property_tests.cpp  calendar_layout_tests.cpp  gui_contract_tests.cpp  i18n_tests.cpp  launch_command_tests.cpp  reminder_dispatch_policy_tests.cpp  reminder_format_tests.cpp  reminder_popup_policy_tests.cpp  reminder_scheduler_policy_tests.cpp  reminder_scheduler_tests.cpp  reminder_service_tests.cpp  reminder_settings_policy_tests.cpp  reminder_text_tests.cpp  reminder_timer_policy_tests.cpp  reminder_visual_policy_tests.cpp  rendering_policy_tests.cpp  store_format_tests.cpp  test_framework.h  theme_tests.cpp  todo_model_core_tests.cpp  todo_model_list_tests.cpp  todo_model_regression_tests.cpp  todo_model_test_utils.h  todo_model_tree_tests.cpp  windows_notifier_tests.cpp
